# pv-hub

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/skills/verify/: SKILL.md
assets/: app.js  index.html  styles.css
docs/superpowers/plans/: 2026-07-01-pv-hub-core-modbus.md  2026-07-01-pv-hub-http-ui.md  2026-07-01-pv-hub-packaging.md  2026-07-03-home-assistant-sink.md
docs/superpowers/specs/: 2026-07-01-solarimetro-pv-hub-design.md  2026-07-03-home-assistant-sink-design.md  2026-07-03-vision-ui-restyle-design.md
docs/superpowers/specs/assets/: 2026-07-01-scada-ui-mockup.html
src/: catalog.rs  config.rs  hub.rs  lib.rs  main.rs  model.rs  scheduler.rs
src/providers/: mod.rs  openmeteo.rs
src/sinks/: mod.rs
src/sinks/homeassistant/: discovery.rs  mod.rs
src/sinks/http/: api.rs  mod.rs  sse.rs
src/sinks/modbus/: frame.rs  mod.rs  server.rs
src/solar/: celltemp.rs  clearsky.rs  mod.rs  position.rs  transposition.rs
tests/fixtures/: openmeteo.json
