[package]
name = "pv-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "pv_hub"
path = "src/lib.rs"

[[bin]]
name = "pv-hub"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal", "io-util"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
spa = "0.5"
async-trait = "0.1"
axum = "0.7"
tower-http = { version = "0.6", features = ["compression-gzip"] }
rust-embed = "8"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
rumqttc = "0.24"

[dev-dependencies]
wiremock = "0.6"
